fix: enable momentum scrolling on iOS to prevent scroll interruption at horizontal boundaries (#2566)

--- a/packages/common/src/styles/slick-grid.scss
+++ b/packages/common/src/styles/slick-grid.scss
@@ -341,6 +341,8 @@
       border: 2px solid white; /* should match background, can't be transparent */
       background-color: rgba(0, 0, 0, 0.5);
     }
+    -webkit-overflow-scrolling: touch;
+    touch-action: manipulation;
   }
   .slick-header,
   .slick-headerrow,
